# markdown-journal-rust

.claude/commands/: commit.md  complete_previous_day.md
mcp-server-copilot-sync/: .gitignore  QUICKSTART.md  README.md  USAGE.md  config.example.json  pyproject.toml  test_mcp_server.py
mcp-server-copilot-sync/copilot-sync/: .mcp.json
mcp-server-copilot-sync/copilot-sync/.plugin/: plugin.json
mcp-server-copilot-sync/scripts/: demo.py  install.sh  setup.sh
mcp-server-copilot-sync/src/mcp_server_copilot_sync/: __init__.py  __main__.py  config.py  server.py  sync.py
mcp-server-copilot-sync/tests/: test_sync.py
template/: daily.md
