[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-copilot-sync"
version = "0.1.0"
description = "MCP server for syncing GitHub Copilot Chat sessions between machines via GitHub"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
]

[project.scripts]
mcp-server-copilot-sync = "mcp_server_copilot_sync:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
dev-dependencies = []
